fix(console): remove connector id and prevent text overflow

--- a/packages/console/src/pages/Connectors/components/CreateForm/index.module.scss
+++ b/packages/console/src/pages/Connectors/components/CreateForm/index.module.scss
@@ -10,6 +10,7 @@
       max-width: 276px;
       width: 276px;
       height: 96px;
+      overflow: hidden;
     }
 
     .connector {
